Wed Sep  1 14:40:01 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* configure.in, configure, include/htconfig.h.in, htlib/regex.c:
	Fix PR#545, to test for presence of alloca.h

Wed Apr 21 22:45:16 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* .version: Bump for final 3.1.2 release.

	* htdoc/where.html, htdoc/FAQ.html: Update to mention the new release.

Tue Apr 20 13:34:22 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/RELEASE.html: Fixed a few typos, updated modification date.

Tue Apr 20 10:54:59 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/RELEASE.html: Add notes on changes in the 3.1.2 release.

	* htdoc/contents.html, htdoc/mailarchive.html, htdoc/where.html,
	htdoc/uses.html: Update with versions from maindocs.

	* installdir/htdig.conf: Add example max_doc_size attribute to cut
	down on FAQ, also add comment on including a file for start_url.

Mon Apr 19 15:40:24 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/WordList.cc(valid_word): fixed to avoid having the new
	HtIsStrictWordChar() test circumvent the allow_numbers option by
	allowing numbers all the time. Also fixed to allow HtIsStrictWordChar()
	to override iscntrl(), so extra_word_characters can define characters
	that a broken locale would define as control characters.

Mon Apr 19 15:17:12 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/WordList.cc(valid_word): fixed bug introduced Jan 9,
	where it stopped scanning for control characters prematurely.
	Now also use iscntrl() to detect all control characters.

Fri Apr 16 10:30:42 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/FAQ.html: fixed typo - use_meta_description was plural.

Wed Apr 14 20:22:31 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	* htlib/regex.h: fixed compile problem with AIX xlc compiler

Tue Apr 13 13:01:04 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(generateStars): Set status to -1 if